tests/paczka1/fuzzy1/73380826.err
Error in line 2: S168 S233 83,7
Error in line 1: oDQD A59 23,3
Error in line 16: jzm82 A59 36,39
Error in line 14: 6NE5 A59 11,5
Error in line 20: 6NE5 A419 28,4
Error in line 28: oDQD A419 17,1
Error in line 35: 7Ty S233 49,0
Error in line 36: 7Ty A419 90,8
Error in line 37: S168 A59 25,8
